platform_versioned_docs/version-4.9.0/configure/platform-configs/audit.mdx
---
title: Audit Logging
sidebar_label: Audit Logging
sidebar_position: 2
sidebar_class_name: pro
description: Learn how to enable and configure audit logging to track activities in the platform, including management instance changes and cluster operations.
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import ConfigureAuditLevelsUI from "../../_partials/guides/configure-audit-levels-ui.mdx";
import ConfigureAuditLevelsHelm from "../../_partials/guides/configure-audit-levels-helm.mdx";
import PolicyConfiguration from "../../api/_partials/resources/config/status/audit/policy.mdx";
import AuditConfiguration from "../../api/_partials/resources/config/status/audit.mdx";

## Overview

Audit logging in the platform provides a security-relevant, chronological set of records documenting the sequence of actions. It audits activities generated by users and applications that use the platform API.

The platform can log activities related to:

- Management instance changes, such as creation of new tenant clusters, spaces, etc.
- Changes within a tenant cluster or space
- Changes within a connected cluster

Auditing in the platform is similar to [auditing Kubernetes clusters](https://kubernetes.io/docs/tasks/debug-application-cluster/audit/) in general.

## Enable auditing

:::warning Two audit fields
There is a field named as `audit` in `values.yaml` of `vcluster-platform` chart and a same field under `config` section, ie, `config.audit`. The former
is to configure the audit log settings for the platform pod container. Enable this to record logs. The `config.audit` enables Audit Log UI feature in vCluster Platform UI.
Thus, make sure the audit logs is being recorded by setting `audit: true` in `values.yaml` first.
:::

Configure auditing through the platform config in the platform UI (`Admin -> Config`). The content added in the UI will automatically be under the `config` section of the `values.yaml`.

An example configuration could look like:

```yaml title="Example audit configuration in platform UI"
audit:
  enabled: true
  level: 1
```

Changing the platform auditing configuration requires a restart to take effect. Restart the platform either through the platform UI or via kubectl: `kubectl rollout restart deploy/loft -n loft`.

Each request on each stage of its execution generates an audit event, which is then pre-processed according to a certain policy and written to a backend (currently only log backends are supported). The policy determines what's recorded and the backends persist the records.

Each request can be recorded with an associated stage. The defined stages are:

- `RequestReceived`: The stage for events generated as soon as the audit handler receives the request, and before it is delegated down the handler chain.
- `ResponseComplete`: The response body has been completed and no more bytes are sent.
- `Panic`: Events generated when a panic occurred.

:::info
The audit logging feature increases the memory consumption of the platform because some context required for auditing is stored for each request. Memory consumption depends on the audit logging configuration.
:::

## Audit levels

The platform provides audit levels, which are preconfigured audit policies for the most common use cases. These levels range from 1 to 4 where 1 logs the fewest requests, while 4 logs the most:

- **Level 1**: Logs modifying requests such as creation / modification or deletion of any objects
- **Level 2**: Like Level 1 but also logs the metadata of reading requests, such as listing pods inside a tenant cluster or space. It won't log the response or request payload and instead only the metadata such as request origin, target, etc.
- **Level 3**: Like Level 2 but instead of only logging the request metadata also logs the complete request payload sent to the platform
- **Level 4**: Like Level 3 but instead of only logging metadata and request payload, also logs the response the platform has sent to the requester

:::info
For all of these levels certain internal read-only APIs are not logged since those might pollute the log and drastically increase log size. To log these, create a custom audit policy as described below.
:::

Configure the audit level through the platform config, which can be modified either through the platform UI or Helm:

<Tabs
  defaultValue="ui"
  values={[
    { label: "UI", value: "ui" },
    { label: "Helm", value: "Helm" },
  ]}
>
  <TabItem value="ui">
    <ConfigureAuditLevelsUI />
  </TabItem>
  <TabItem value="Helm">
    <ConfigureAuditLevelsHelm />
  </TabItem>
</Tabs>

## Optional: Audit policy

:::warning
It is recommended to use audit levels instead of audit policy directly, because a policy is much more complex to define.
:::

As an alternative to audit levels, policy allows you to define exact rules about what events should be recorded and what data they should include. When an event is processed, it's compared against the list of rules in order. The first matching rule sets the audit granularity of the event. The defined audit granularity options are:

- `None`: Don't log events that match this rule.
- `Metadata`: Log request metadata (requesting user, timestamp, resource, verb, etc.) but not request or response body.
- `Request`: Log event metadata and request body but not response body. This does not apply for non-resource requests.
- `RequestResponse`: Log event metadata, request and response bodies. This does not apply for non-resource requests.

An example policy that catches all requests:

```yaml title="Example audit policy in values.yaml"
config:
  audit:
    enabled: true
    policy:
      rules:
        - level: Metadata
          omitStages:
            - RequestReceived
```

Below you can find a complete policy reference:

<PolicyConfiguration />

## Persist audit logs

There are two ways to persist platform audit logs: deploying the platform with a persistent volume claim (PVC) or connecting the platform to a persistent database. 

:::info HA only supported with persistent database
If you are running the platform in high availability (HA mode), the only way to persist audit logs is to use a persistent database. The PVC approach does not work.
:::

### Deploy the platform with a PVC to save audit logs

Create a new `values.yaml` with the following values:

```yaml title="values.yaml for PVC"
audit:
  persistence:
    enabled: true
    # size: 30Gi
```

:::warning
The `audit` here is the `audit` in `values.yaml`, not the `audit` under `config` section of `values.yaml`. It controls whether the 
audit log is recorded and saved.
:::

Apply the values using Helm:

```bash title="Apply Helm values"
Helm upgrade vcluster-platform vcluster-platform -n vcluster-platform --version 4.0.0-alpha.12 \
--repo https://charts.loft.sh \
--reuse-values \
-f values.yaml
```

### Use a persistent database as platform audit backend

Go to `Admin > Config` and specify the following platform config setting:

```yaml title="Platform config for persistent database"
audit:
  dataStoreEndpoint: mysql://username:password@tcp(hostname:3306)/database-name
```

Apply the changes and wait until the platform is restarted.

## View and export audit logs

By default, the platform logs audit events to the following locations:

- To a log file in JSON format located at `/var/log/loft/audit.log` inside the platform container. Each line inside the log represents a single audit event.
- To an internal sqlite storage located at `/var/log/loft/audit.db` inside the
platform container. This sqlite database is used to display audit log events in
the platform UI. By default audit events in the sqlite are not persisted, so
restarting the platform clears the database. Instead of using a sqlite database, the platform can write those events to a persistent mysql database configured through the platform config:

```yaml title="Platform config for MySQL database in values.yaml"
config:
  audit:
    enabled: true
    dataStoreEndpoint: mysql://username:password@tcp(hostname:3306)/database-name
```

### Enable audit sidecar

To easily export the audit events to third party systems, enable the audit log
sidecar that prints all the audit events onto stdout in a separate container which can then be easily watched and exported.
Enabling the sidecar is only possible through Helm values.

Create a `values.yaml` with the following contents:

```yaml title="values.yaml for audit sidecar"
audit:
  enableSideCar: true
```

:::warning
The `audit` here is the `audit` in `values.yaml`, not the `audit` under `config` section of `values.yaml`. It controls whether the 
audit log is recorded and saved. 

Thus, you cannot configure this under `Admin > Config`, since this requires a change in the platform deployment itself, which is why this is a Helm option only
:::

Update the Helm release:

```bash title="Update helm release"
helm upgrade vcluster-platform vcluster-platform --namespace vcluster-platform \
                                         --repo https://charts.loft.sh \
                                         --version 4.0.0-alpha.12 \
                                         --reuse-values \
                                         --values values.yaml
```

Wait until the platform has restarted, then view the audit logs:

```bash title="View audit logs"
kubectl logs -n vcluster-platform -l app=loft -c audit -f
```

### Audit config reference
The following is the complete list of fields under `config.audit` section of the `values.yaml`.

<AuditConfiguration />

## Audit logging for Regional Cluster Endpoints

Regional Cluster Endpoints allow direct communication between users and clusters, bypassing the central platform instance. When this feature is enabled, the platform audit configuration is synced to each agent. Each platform agent propagates audit events it receives back to the central platform instance, which then logs it as a regular audit event. These "propagated" events can be identified by the `annotations.audit.loft.sh/sent-by-agent` identifier in an audit event.

:::info Disable agent sync back
Disable event sync back from the agent to the central platform instance via the audit config option `disableAgentSyncBack`.
:::
